add forms, changed Music page & more

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta rel="canonical" href="http://trtn.fr/">
+<meta rel="canonical" href="https://trtn.github.io/">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
@@ -23,9 +23,9 @@
 <style>.anim{visibility:hidden}</style>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>TRTN</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929112419.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929112419-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -33,7 +33,7 @@
 <div class="pos-2 vis-2 section">
 <div class="vis pos-3 size-2 cont-2">
 <div class="vis pos-4 size-3 cont-3">
-<p class="para"><span class="font">your</span><span class="font"> other mate in the room</span></p>
+<p class="para"><span class="font">your other mate in the room</span></p>
 </div>
 <div class="vis pos-5 size-4 cont-4">
 <p class="para-2"><span class="font-2"><a href="#">TRTN</a></span></p>
@@ -47,7 +47,7 @@
 <p class="para-3"><span class="font-3">Autumn 2017</span></p>
 </div>
 <div class="vis pos-9 size-10 cont-7">
-<img src="images/leaf.svg" alt="" class="img js-7">
+<img src="images/leaf.svg" alt="" class="img js-9">
 </div>
 </div>
 </div>
@@ -67,7 +67,7 @@
 <div class="vis pos-14 size-16 cont-11">
 <div class="anim fadeIn js-2 vis pos-15 size-17 cont-12">
 <p class="para-6"><span class="font-8">5 articles</span><span class="font-9">&nbsp;</span></p>
-<p class="para-7"><span class="font-10">rspct, </span><span class="font-10">louve</span></p>
+<p class="para-7"><span class="font-10">rspct, louve</span></p>
 </div>
 </div>
 <div class="vis pos-16 size-18 cont-13">
@@ -103,7 +103,7 @@
 </div>
 <div class="anim fadeIn js-4 vis pos-21 size-30 cont-20">
 <p class="para-4"><span class="font-4">4 movies</span><span class="font-5">&nbsp;</span></p>
-<p class="para-8"><span class="font-6">fnck</span><span class="font-6">, ppp</span></p>
+<p class="para-8"><span class="font-6">fnck, ppp</span></p>
 </div>
 </div>
 </div>
@@ -136,14 +136,45 @@
 <div class="vis pos-28 size-41 cont-27">
 <p class="para-9"><span class="font-15">contact</span><span class="font-16">&nbsp;</span></p>
 <p class="para-10"><span class="font-17">&nbsp;</span></p>
-<p class="para-11"><span class="font-18">write</span><span class="font-18">totrtn</span><span class="font-18">@</span><span class="font-18">gmail</span><span class="font-18">.com</span></p>
+<p class="para-11"><span class="font-18">writetotrtn@gmail.com</span></p>
+</div>
+<div class="vis pos-29 size-42 cont-2">
+<div class="vis pos-7 size-43 colwrapper">
+<div class="vis pos-7 size-44 cont-28">
+<input autocapitalize="off" placeholder="send BTC" class="input" value="3GmQQyhJj8XGKAChxNMKmdfD2gsTgLyHBx" type="text" autocorrect="off" name="send_BTC">
+</div>
+<div class="vis pos-30 size-45 cont-29">
+<a target="_blank" href="download/send-btc.pdf" class="button-2 vis-3 pos-13 size-46 font-19">Donate BTC</a>
+</div>
+</div>
+<form class="vis pos-31 size-47" action="thank-you.php" method="POST">
+<div class="vis pos-7 size-48 cont-2">
+<input autocapitalize="off" placeholder="send love" class="input-2" value="<3" type="text" autocorrect="off" name="message[]">
+</div>
+<div class="vis pos-30 size-49 cont-2">
+<input type="text" name="qgdvdt" class="vis-4">
+<input type="text" name="uxbqsvpgyr" class="vis-4">
+<input class="js-7 vis-5 pos-13 size-50 submit" value="Send love" type="submit" name="sendmailform" disabled>
+</div>
+</form>
+<form class="vis pos-32 size-51" action="thank-you.php" method="POST">
+<div class="vis pos-7 size-52 cont-2">
+<input autocapitalize="off" placeholder="call me maybe for updates" class="input-3" type="text" required autocorrect="off" name="e-mail[]">
+</div>
+<div class="vis pos-33 size-53 cont-2">
+<input type="text" name="qgdvdt" class="vis-4">
+<input type="text" name="uxbqsvpgyr" class="vis-4">
+<input class="js-8 vis-5 pos-13 size-54 submit" value="Share e-mail" type="submit" name="sendmailform" disabled>
+</div>
+</form>
 </div>
 </div>
 </div>
 <script type="text/javascript" src="js/fixed.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
-<script type="text/javascript" src="js/index.20170928115033.js"></script>
+<script type="text/javascript" src="js/h5validate.js"></script>
+<script type="text/javascript" src="js/index.20170929112419.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
