--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta rel="canonical" href="http://trtn.fr/music.html">
+<meta rel="canonical" href="https://trtn.github.io/music.html">
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
@@ -22,145 +22,107 @@
 <meta name="viewport" content="width=960">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>Music</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929112419.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033-lteIE7.css">
-<![endif]-->
-<!--[if lte IE 8]>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033-lteIE8.css">
-<![endif]-->
-<!--[if gte IE 9]>
-<link rel="stylesheet" type="text/css" href="css/site.20170928115033-gteIE9.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929112419-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body-2">
-<div class="vis pos size-42 cont-28">
-<div class="vis pos-29 size-43 cont-29">
-<div class="pos-29 vis-2 section">
-<div class="vis pos-7 size-44 cont-30">
-<a class="button-2 vis-3 pos-13 size-45 font-19" href="index.html"></a>
-</div>
-</div>
-</div>
-<div class="pos-30 vis-2 section">
-<div class="vis pos-7 size-46 cont-31">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-7 size-47 cont-33">
+<div class="fbk vis pos size-55 cont fixed-2" data-fbk="fixed-2">
+<div class="pos-34 vis-2 section">
+<div class="vis pos-7 size-56 cont-2">
+<div class="vis pos-7 size-57 cont-4">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/b6YOjhO4LNY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-31 size-48 cont-17">
+<div class="vis pos-35 size-58 cont-30">
 <p class="para-12"><span class="font-20">Eagles &amp; Butterflies - &Oacute;yeme</span></p>
 </div>
 </div>
-</div>
-<div class="vis pos-32 size-46 cont-34">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-33 size-3 cont-22">
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-37 size-59 cont-31">
 <p class="para-13"><span class="font-21">Sahal&eacute; - Nlreb Mra Alrrih</span></p>
 </div>
-<div class="vis pos-34 size-47 cont-3">
+<div class="vis pos-38 size-57 cont-32">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/9H3lCYKNC8o?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-</div>
-<div class="vis pos-32 size-46 cont-15">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-7 size-47 cont-9">
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-7 size-57 cont-33">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/FJtSvexr0oA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-31 size-48 cont-19">
+<div class="vis pos-39 size-60 cont-17">
 <p class="para-12"><span class="font-20">Kiasmos - Swept</span></p>
 </div>
 </div>
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-40 size-3 cont-34">
+<p class="para-14"><span class="font-22">Bileo - Your Can Win</span></p>
 </div>
-<div class="vis pos-32 size-46 cont-6">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-33 size-3 cont-35">
-<p class="para-13"><span class="font-21">Bileo - Your Can Win</span></p>
-</div>
-<div class="vis pos-34 size-47 cont-36">
+<div class="vis pos-41 size-57 cont-35">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ZoAATtUmvUs?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-</div>
-<div class="vis pos-32 size-46 cont-10">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-7 size-47 cont-16">
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-7 size-57 cont-36">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/jymI3c5npjM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-31 size-48 cont-7">
+<div class="vis pos-42 size-61 cont-15">
 <p class="para-12"><span class="font-20">Nina Kraviz - Turn On the Radio</span></p>
 </div>
 </div>
+<div class="vis pos-43 size-56 cont-2">
+<div class="vis pos-40 size-3 cont-10">
+<p class="para-14"><span class="font-22">Lorn - Acid Rain</span></p>
 </div>
-<div class="vis pos-35 size-46 cont-13">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-33 size-3 cont-26">
-<p class="para-13"><span class="font-21">Lorn - Acid Rain</span></p>
-</div>
-<div class="vis pos-34 size-47 cont-25">
+<div class="vis pos-41 size-57 cont-16">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/nxg4C365LbQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-</div>
-<div class="vis pos-32 size-46 cont-23">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-7 size-47 cont-37">
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-7 size-57 cont-7">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/02HxNjgPyZI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-31 size-48 cont-38">
+<div class="vis pos-42 size-61 cont-20">
 <p class="para-12"><span class="font-20">Phoenix - Telefono</span></p>
 </div>
 </div>
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-40 size-3 cont-9">
+<p class="para-14"><span class="font-22">Petar Dundov - Distant Shores</span></p>
 </div>
-<div class="vis pos-32 size-46 cont-27">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-33 size-3 cont-39">
-<p class="para-13"><span class="font-21">Petar Dundov - Distant Shores</span></p>
-</div>
-<div class="vis pos-34 size-47 cont-40">
+<div class="vis pos-41 size-57 cont-6">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/07mtJ5D4IPU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
 </div>
-</div>
-<div class="vis pos-32 size-46 cont-41">
-<div class="vis pos-7 size-46 cont-32">
-<div class="vis pos-7 size-47 cont-12">
+<div class="vis pos-36 size-56 cont-2">
+<div class="vis pos-7 size-57 cont-19">
 <div class="wrapper">
 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/L3Mljrf2oRU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </div>
 </div>
-<div class="vis pos-31 size-48 cont-20">
+<div class="vis pos-42 size-61 cont-12">
 <p class="para-12"><span class="font-20">Gui Boratto - Beautiful Life</span></p>
 </div>
 </div>
 </div>
 </div>
-<div class="vis pos-36 size-49 cont-42"></div>
-<div class="pos-37 vis-2 section">
-<div class="vis pos-7 size-44 cont-43">
-<a class="button-2 vis-3 pos-13 size-45 font-19" href="index.html"></a>
-</div>
-</div>
-</div>
-<script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/music.20170928115033.js"></script>
+<script type="text/javascript" src="js/fixed.min.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
