added Picture page & go back to main stage buttons

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <style>.anim{visibility:hidden}</style>
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>TRTN</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170929112419.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929122529.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170929112419-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929122529-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
@@ -170,11 +170,13 @@
 </div>
 </div>
 </div>
+<a name="anchor1" class="vis pos-34 size-55">
+</a>
 <script type="text/javascript" src="js/fixed.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/woolite.js"></script>
 <script type="text/javascript" src="js/h5validate.js"></script>
-<script type="text/javascript" src="js/index.20170929112419.js"></script>
+<script type="text/javascript" src="js/index.20170929122529.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
