--- a/pictures.html
+++ b/pictures.html
@@ -22,13 +22,62 @@
 <meta name="viewport" content="width=960">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Muli%7CMontserrat:300,400&amp;subset=all">
 <title>Pictures</title>
-<link rel="stylesheet" type="text/css" href="css/site.20170929112419.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929122529.css">
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="css/site.20170929112419-lteIE7.css">
+<link rel="stylesheet" type="text/css" href="css/site.20170929122529-lteIE7.css">
 <![endif]-->
 </head>
 <body id="body">
-<div class="vis pos size-62 cont-37"></div>
+<div class="vis pos size cont-37">
+<div class="pos-35 vis-2 section">
+<div class="vis pos-7 size-64 cont-4">
+<p class="para-12"><span class="font-20"><a href="index.html#anchor1">Go back to main stage.</a></span></p>
+</div>
+<div class="js-10 vis pos-46 size-65 cont-30 gallery">
+<div class="slider slider-nav">
+<div><picture><source srcset="images/thumb-tobias-van-schneider-88137-86.jpg 1x, images/thumb-tobias-van-schneider-88137-172.jpg 2x"><img class="slide0" src="images/thumb-tobias-van-schneider-88137-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-jordi-ganduxe-358819-86.jpg 1x, images/thumb-jordi-ganduxe-358819-172.jpg 2x"><img class="slide1" src="images/thumb-jordi-ganduxe-358819-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-shazia-mirza-222594-86.jpg 1x, images/thumb-shazia-mirza-222594-172.jpg 2x"><img class="slide2" src="images/thumb-shazia-mirza-222594-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-hogarth-de-la-plante-17749-86.jpg 1x, images/thumb-hogarth-de-la-plante-17749-172.jpg 2x"><img class="slide3" src="images/thumb-hogarth-de-la-plante-17749-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_0548-86.jpg 1x, images/thumb-img_0548-172.jpg 2x"><img class="slide4" src="images/thumb-img_0548-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1176-86.jpg 1x, images/thumb-img_1176-172.jpg 2x"><img class="slide5" src="images/thumb-img_1176-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1233-86.jpg 1x, images/thumb-img_1233-172.jpg 2x"><img class="slide6" src="images/thumb-img_1233-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1435-86.jpg 1x, images/thumb-img_1435-172.jpg 2x"><img class="slide7" src="images/thumb-img_1435-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1461-86.jpg 1x, images/thumb-img_1461-172.jpg 2x"><img class="slide8" src="images/thumb-img_1461-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1494-86.jpg 1x, images/thumb-img_1494-172.jpg 2x"><img class="slide9" src="images/thumb-img_1494-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-img_1768-2-86.jpg 1x, images/thumb-img_1768-2-172.jpg 2x"><img class="slide10" src="images/thumb-img_1768-2-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-luke-braswell-264173-86.jpg 1x, images/thumb-luke-braswell-264173-172.jpg 2x"><img class="slide11" src="images/thumb-luke-braswell-264173-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-matt-helbig-237295-86.jpg 1x, images/thumb-matt-helbig-237295-172.jpg 2x"><img class="slide12" src="images/thumb-matt-helbig-237295-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-mickael-tournier-262768-86.jpg 1x, images/thumb-mickael-tournier-262768-172.jpg 2x"><img class="slide13" src="images/thumb-mickael-tournier-262768-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-philipp-kammerer-266322-86.jpg 1x, images/thumb-philipp-kammerer-266322-172.jpg 2x"><img class="slide14" src="images/thumb-philipp-kammerer-266322-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-teddy-kelley-192865-86.jpg 1x, images/thumb-teddy-kelley-192865-172.jpg 2x"><img class="slide15" src="images/thumb-teddy-kelley-192865-86.jpg"></picture></div>
+<div><picture><source srcset="images/thumb-brandon-wong-263951-86.jpg 1x, images/thumb-brandon-wong-263951-172.jpg 2x"><img class="slide16" src="images/thumb-brandon-wong-263951-86.jpg"></picture></div>
+</div>
+<div class="slider slider-for">
+<div><picture><source srcset="images/tobias-van-schneider-88137-960.jpg 1x, images/tobias-van-schneider-88137-1920.jpg 2x"><img class="slide0" src="images/tobias-van-schneider-88137-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/jordi-ganduxe-358819-960.jpg 1x, images/jordi-ganduxe-358819-1920.jpg 2x"><img class="slide1" data-src="images/jordi-ganduxe-358819-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/shazia-mirza-222594-960.jpg 1x, images/shazia-mirza-222594-1920.jpg 2x"><img class="slide2" data-src="images/shazia-mirza-222594-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/hogarth-de-la-plante-17749-960.jpg 1x, images/hogarth-de-la-plante-17749-1920.jpg 2x"><img class="slide3" data-src="images/hogarth-de-la-plante-17749-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_0548-960.jpg 1x, images/img_0548-1920.jpg 2x"><img class="slide4" data-src="images/img_0548-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1176-960.jpg 1x, images/img_1176-1920.jpg 2x"><img class="slide5" data-src="images/img_1176-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1233-960.jpg 1x, images/img_1233-1920.jpg 2x"><img class="slide6" data-src="images/img_1233-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1435-960.jpg 1x, images/img_1435-1920.jpg 2x"><img class="slide7" data-src="images/img_1435-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1461-960.jpg 1x, images/img_1461-1920.jpg 2x"><img class="slide8" data-src="images/img_1461-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1494-960.jpg 1x, images/img_1494-1920.jpg 2x"><img class="slide9" data-src="images/img_1494-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/img_1768-2-960.jpg 1x, images/img_1768-2-1920.jpg 2x"><img class="slide10" data-src="images/img_1768-2-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/luke-braswell-264173-960.jpg 1x, images/luke-braswell-264173-1920.jpg 2x"><img class="slide11" data-src="images/luke-braswell-264173-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/matt-helbig-237295-960.jpg 1x, images/matt-helbig-237295-1920.jpg 2x"><img class="slide12" data-src="images/matt-helbig-237295-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/mickael-tournier-262768-960.jpg 1x, images/mickael-tournier-262768-1920.jpg 2x"><img class="slide13" data-src="images/mickael-tournier-262768-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/philipp-kammerer-266322-960.jpg 1x, images/philipp-kammerer-266322-1920.jpg 2x"><img class="slide14" data-src="images/philipp-kammerer-266322-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/teddy-kelley-192865-960.jpg 1x, images/teddy-kelley-192865-1920.jpg 2x"><img class="slide15" data-src="images/teddy-kelley-192865-960.jpg"></picture></div>
+<div><picture><source data-srcset="images/brandon-wong-263951-960-1.jpg 1x, images/brandon-wong-263951-1920-1.jpg 2x"><img class="slide16" data-src="images/brandon-wong-263951-960-1.jpg"></picture></div>
+</div>
+</div>
+</div>
+</div>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/slick.js"></script>
+<script type="text/javascript" src="js/pictures.20170929122529.js"></script>
 <script type="text/javascript">
 var ver=RegExp(/Mozilla\/5\.0 \(Linux; .; Android ([\d.]+)/).exec(navigator.userAgent);if(ver&&parseFloat(ver[1])<5){document.getElementsByTagName('body')[0].className+=' whitespacefix';}
 </script>
